@@ -1,3 +1,8 @@
+2016-07-24  Ola Jeppsson  <ola@adapteva.com>
+
+	* traps.c (sim_engine_invalid_insn): Handle remote register writes
+	before halting simulation.
+
 2016-07-22  Ola Jeppsson  <ola@adapteva.com>
 
 	* esim.c (es_mem_store): Make arguments more library-like.
